# cookiecutter-fastapi

./: Dockerfile  README.md  pyproject.toml  tox.ini
src/app/: __main__.py  asgi.py  settings.py
src/app/conf/: __init__.py  global_settings.py
src/app/core/: asgi.py  handlers.py
src/app/core/management/: __init__.py
src/app/core/management/commands/: __init__.py  loaddata.py  runserver.py  shell.py
src/app/db/: engines.py
src/app/db/models/: base.py
src/app/dependencies/: __init__.py  session_maker.py
src/app/middleware/: __init__.py
src/app/middleware/http/: __init__.py  database.py  exception.py
src/app/migrations/: env.py
src/app/schemas/domain/response/: __init__.py
src/app/schemas/response/: __init__.py
src/app/urls/: __init__.py
src/app/urls/api/: __init__.py
src/app/urls/api/v1/: __init__.py  ping.py
src/app/utils/: lifespan.py  timezone.py
src/app/views/: __init__.py  ping.py
test/: conftest.py
{{cookiecutter.project_name}}/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
{{cookiecutter.project_name}}/src/app/: settings.py
{{cookiecutter.project_name}}/src/app/conf/: __init__.py
{{cookiecutter.project_name}}/src/app/core/handlers/: asgi.py
{{cookiecutter.project_name}}/src/app/core/management/: __init__.py
{{cookiecutter.project_name}}/src/app/middleware/: __init__.py
{{cookiecutter.project_name}}/src/app/middleware/http/: __init__.py  database.py  exception.py
{{cookiecutter.project_name}}/src/app/migrations/: env.py
{{cookiecutter.project_name}}/src/app/schemas/response/: __init__.py  ping.py
{{cookiecutter.project_name}}/src/app/urls/: __init__.py
{{cookiecutter.project_name}}/src/app/urls/api/v1/: __init__.py
{{cookiecutter.project_name}}/src/app/views/: ping.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: __main__.py  asgi.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/conf/: __init__.py  global_settings.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/core/: asgi.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/core/management/commands/: __init__.py  loaddata.py  runserver.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/db/: engines.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/dependencies/: __init__.py  database.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/middleware/http/: database.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/urls/api/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/urls/api/v1/: ping.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/utils/: lifespan.py  timezone.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/views/: __init__.py
{{cookiecutter.project_name}}/test/: conftest.py
