[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
dynamic = ["version"]
description = "A starter project for a REST API using FastAPI"
readme = "README.md"
authors = [{ name = "Amogh Madan", email = "amoghmadaan@gmail.com" }]
license-files = ["LICENSE"]
requires-python = ">=3.13,<3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Framework :: FastAPI :: 0.129.0",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: ASGI",
]
dependencies = [
    "alembic==1.18.4",
    "aiosqlite==0.22.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "certifi==2026.1.4",
    "click==8.3.1",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.129.0",
    "fastapi-cli==0.0.21",
    "fastapi-cloud-cli==0.11.0",
    "fastar==0.8.0",
    "greenlet==3.3.1",
    "gunicorn==25.0.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "Jinja2==3.1.6",
    "Mako==1.3.10",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "mdurl==0.1.2",
    "packaging==26.0",
    "pydantic==2.12.5",
    "pydantic-extra-types==2.11.0",
    "pydantic-settings==2.12.0",
    "pydantic_core==2.41.5",
    "Pygments==2.19.2",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "PyYAML==6.0.3",
    "rich==14.3.2",
    "rich-toolkit==0.19.4",
    "rignore==0.7.6",
    "sentry-sdk==2.52.0",
    "shellingham==1.5.4",
    "SQLAlchemy==2.0.46",
    "sqlmodel==0.0.33",
    "starlette==0.52.1",
    "typer==0.23.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==16.0",
]

[project.scripts]
app = "app.__main__:main"

[project.urls]
Homepage = "https://github.com/amoghmadan/Python-FastAPI-REST-Starter"
Repository = "https://github.com/amoghmadan/Python-FastAPI-REST-Starter"
Issues = "https://github.com/amoghmadan/Python-FastAPI-REST-Starter/issues"


[project.optional-dependencies]
automation = [
    "cachetools==6.2.4",
    "chardet==5.2.0",
    "colorama==0.4.6",
    "distlib==0.4.0",
    "filelock==3.20.1",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "pyproject-api==1.10.0",
    "tox==4.32.0",
    "virtualenv==20.35.4",
]
mysql = ["asyncmy==0.2.10"]
postgres = ["asyncpg==0.31.0"]
test = [
    "coverage==7.13.1",
    "iniconfig==2.3.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]


[tool.setuptools.packages.find]
where = ["src"]
exclude = ["**/__pycache__"]


[tool.setuptools_scm]
write_to = "src/app/__version__.py"
local_scheme = "no-local-version"


[tool.coverage.run]
omit = ["test/*", ".venv/*", "venv/*", "__version__.py"]


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["test"]
asyncio_mode = "auto"


[tool.isort]
profile = "black"
extend_skip = ["migrations"]

[tool.black]
extend-exclude = "migrations/*"


[tool.bandit]
exclude_dirs = [
    "./.eggs",
    "./.git",
    "./.tox",
    "./build",
    "./coverage",
    "./dist",
    "./venv",
    "./__pycache__",
    "*tests*",
]


[tool.mypy]
exclude = """
^.*\b(migrations)\b.*$
"""
ignore_missing_imports = true


[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "app:migrations"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
 file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]

# timezone to use when rendering the date within the migration file
# as well as the filename.
# If specified, requires the python>=3.9 or backports.zoneinfo library and tzdata library.
# Any required deps can installed by adding `alembic[tz]` to the pip requirements
# string value is passed to ZoneInfo()
# leave blank for localtime
# timezone =

# max length of characters to apply to the "slug" field
# truncate_slug_length = 40

# set to 'true' to run the environment during
# the 'revision' command, regardless of autogenerate
# revision_environment = false

# set to 'true' to allow .pyc and .pyo files without
# a source .py file to be detected as revisions in the
# versions/ directory
# sourceless = false

# version location specification; This defaults
# to <script_location>/versions.  When using multiple version
# directories, initial revisions must be specified with --version-path.
# version_locations = [
#    "%(here)s/alembic/versions",
#    "%(here)s/foo/bar"
# ]


# set to 'true' to search source files recursively
# in each "version_locations" directory
# new in Alembic version 1.10
# recursive_version_locations = false

# the output encoding used when revision files
# are written from script.py.mako
# output_encoding = "utf-8"

# This section defines scripts or Python functions that are run
# on newly generated revision scripts.  See the documentation for further
# detail and examples
# [[tool.alembic.post_write_hooks]]
# format using "black" - use the console_scripts runner,
# against the "black" entrypoint
# name = "black"
# type = "console_scripts"
# entrypoint = "black"
# options = "-l 79 REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
# name = "ruff"
# type = "module"
# module = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# Alternatively, use the exec runner to execute a binary found on your PATH
# name = "ruff"
# type = "exec"
# executable = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
